  CHANGES SINCE 1.2
=====================

Threading in the genetic algorithm is now much more efficient
Set up continuous integration with Travis
Added integration tests
Can now run without Lucene on classpath
Added HTMLCleaner
Added StripNontextCharacters
Genetic algorithm:
  mutation and recombination rates now evolve by themselves
  user can set both rates
  improved choice of questions asked under active learning
Support for boosting in LuceneDatabase
  implemented by Fabrizio Fortino