@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Thu Apr 10 18:40:53 CEST 2014
-buildNumber0=3363
+#Fri Apr 11 19:10:10 CEST 2014
+buildNumber0=3370
