@@ -70,14 +70,14 @@ TO PUBLISH SNAPSHOTS
       <version>0.9.11</version>
     </dependency>
 
-      <!-- JSON support -->
-      <dependency>
-          <groupId>com.fasterxml.jackson.core</groupId>
-          <artifactId>jackson-core</artifactId>
-          <version>2.3.2</version>
-      </dependency>
+    <!-- JSON support -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.3.2</version>
+    </dependency>
       
-      <!-- ===== TEST DEPENDENCIES -->
+    <!-- ===== TEST DEPENDENCIES -->
 
     <dependency>
       <groupId>junit</groupId>
